[project]
name = "llm-for-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "deeplake>=4.4.2",
    "deepspeed>=0.18.2",
    "neural-compressor>=3.6",
    "numpy>=1.26.4",
    "onnx>=1.19.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "scipy>=1.16.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
    "wandb>=0.23.0",
]
